--- a/nav-bar.html
+++ b/nav-bar.html
@@ -76,6 +76,34 @@
         <img src="https://www.docplanner.com/img/sygnet.png" alt="" />
         <h1 class="text-info">Making the healthcare experience more human</h1>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <p>
+              We want patients to find the perfect doctor and book an
+              appointment in the most easy way. The patient journey should be
+              enjoyable, and that's why we are always next to them: to help them
+              find the best possible care. Anytime, anywhere.
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <p>
+              We also help doctors to better manage their practice and build
+              their online reputation. With our integrated end-to-end solution,
+              doctors are able not only to improve their online presence, but
+              also to devote their time to what really matters: their patients.
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-12">
+            <p>
+              We also help doctors to better manage their practice and build
+              their online reputation. With our integrated end-to-end solution,
+              doctors are able not only to improve their online presence, but
+              also to devote their time to what really matters: their patients.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
