--- a/cards-grid.html
+++ b/cards-grid.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container-fluid">
       <!-- on peut mettre auto au lieu de 3 mais il va la deviser selon la page  -->
-      <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-3 row-cols-md-2">
+      <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2">
         <div class="col" style="background-color: black">
           <div class="card mx-auto mb-2 shadow-lg" style="width: 18rem">
             <img
